--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,24 @@
-numpy
-scipy
-visdom
+certifi==2020.11.8
+chardet==3.0.4
+dataclasses==0.8
+editdistance==0.5.3
+future==0.18.2
+idna==2.10
+jsonpatch==1.27
+jsonpointer==2.0
+kaldiio==2.17.0
+numpy==1.19.4
+Pillow==8.0.1
+PyYAML==5.3.1
+pyzmq==20.0.0
+requests==2.25.0
+scipy==1.5.4
+six==1.15.0
+torch==1.7.0
+torchaudio==0.7.0
+torchfile==0.1.0
+tornado==6.1
+typing-extensions==3.7.4.3
+urllib3==1.26.2
+visdom==0.1.8.9
+websocket-client==0.57.0
